k3s/demo_app/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: k8s-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: localhost:30500/k8s-demo-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: k8s-demo
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gw
  namespace: k8s-demo
spec:
  gatewayClassName: gateway-class
  addresses:
    - type: IPAddress
      value: 139.59.213.42
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: listspree.com
      allowedRoutes:
        namespaces: { from: Same }
    - name: https
      protocol: HTTPS
      port: 443
      hostname: listspree.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: app-example-com-tls
      allowedRoutes:
        namespaces: { from: Same }
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  namespace: k8s-demo
spec:
  parentRefs:
    - name: public-gw
      sectionName: https
  hostnames:
    - listspree.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app
          port: 3000
